Install control center packages, add defaults opts

--- a/tasks/archlinux/main.yml
+++ b/tasks/archlinux/main.yml
@@ -1,25 +1,6 @@
-- name: "Install base package-group 'mate'"
-  community.general.pacman:
-    name: mate
-    state: present
-    extra_args: --needed
-  become: true
-  become_user: root
+- name: "MATE: install base 'mate' and 'mate-extra' packages"
+  ansible.builtin.include_tasks: install_base_pkgs.yml
 
-- name: "Install package-group 'mate-extra' packages commonly used by all machines"
-  community.general.pacman:
-    name:
-      - atril
-      - caja-wallpaper
-      - engrampa
-      - eom
-      - mate-calc
-      - mate-screensaver
-      - mate-system-monitor
-      - mate-terminal
-      - mate-utils
-      - pluma
-    state: present
-  become: true
-  become_user: root
+- name: "MATE: install Control Center packages"
+  ansible.builtin.include_tasks: install_ctl_ctr_pkgs.yml
 
