Add user_name req role var, use for dconf

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,6 @@
+# primary MATE user name
+user_name
+
 # enable sound applets, applications, and Control Center integration
 enable_sound_support: true
 
