Try hiding only computer icon, individually

--- a/tasks/config_wm.yml
+++ b/tasks/config_wm.yml
@@ -1,6 +1,6 @@
-- name: "In WM, hide all desktop icons"
+- name: "In WM, hide 'computer' desktop icons"
   community.general.dconf:
-    key: "/org/mate/background/show-desktop-icons"
+    key: "/org/mate/caja/desktop/computer-icon-visible"
     value: "false"
     state: present
   become: true
