Split into sep tasks for each mate-extra package

--- a/tasks/archlinux/main.yml
+++ b/tasks/archlinux/main.yml
@@ -1,5 +1,8 @@
-- name: "Install base 'mate' and 'mate-extra' packages"
+- name: "Install base 'mate' window manager packages"
   ansible.builtin.include_tasks: install_base_pkgs.yml
+
+- name: "Install add-on application packages from 'mate-extra' package-group"
+  ansible.builtin.include_tasks: install_mate_extra_pkgs.yml
 
 - name: "Install Control Center packages"
   ansible.builtin.include_tasks: install_ctl_ctr_pkgs.yml
