Install libcanberra-pulse pkg, for system sounds

--- a/tasks/archlinux/install_ctl_ctr_pkgs.yml
+++ b/tasks/archlinux/install_ctl_ctr_pkgs.yml
@@ -14,7 +14,9 @@
         state: present
     - name: "Install 'mate-media' package, for sound support"
       community.general.pacman:
-        name: mate-media
+        name:
+          - mate-media
+          - libcanberra-pulse
         state: present
       when: enable_sound_support
     - name: "Install 'system-config-printer' package, for printing support"
