Reorg tasks into install/ and main/

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,6 @@
-- name: "Install MATE DE packages for Arch Linux"
-  ansible.builtin.include_tasks: archlinux/main.yml
-  when: ansible_os_family == "Archlinux"
+- name: "Install MATE DE packages"
+  ansible.builtin.include_tasks: install/main.yml
 
 - name: "Configure MATE window manager settings"
-  ansible.builtin.include_tasks: config_wm.yml
+  ansible.builtin.include_tasks: config/main.yml
 
