--- a/tasks/config/mate_terminal.yml
+++ b/tasks/config/mate_terminal.yml
@@ -1,17 +1,16 @@
-- name: "In MATE Terminal app, set background to '{{ terminal_bg_type }}'"
-  community.general.dconf:
-    key: "/org/mate/terminal/profiles/default/background-type"
-    value: "'{{ terminal_bg_type }}'"
-    state: present
+- name: "Configure MATE Terminal app settings"
+  block:
+    - name: "In MATE Terminal app, set background to '{{ terminal_bg_type }}'"
+      community.general.dconf:
+        key: "/org/mate/terminal/profiles/default/background-type"
+        value: "'{{ terminal_bg_type }}'"
+        state: present
+    - name: "In MATE Terminal app, set background transparency to {{ terminal_bg_transparency }}"
+      community.general.dconf:
+        key: "/org/mate/terminal/profiles/default/background-darkness"
+        value: "{{ terminal_bg_transparency }}"
+        state: present
+      when: terminal_bg_type == 'transparent'
   become: true
   become_user: "{{ user_name }}"
-
-- name: "In MATE Terminal app, set background transparency to {{ terminal_bg_transparency }}"
-  community.general.dconf:
-    key: "/org/mate/terminal/profiles/default/background-darkness"
-    value: "{{ terminal_bg_transparency }}"
-    state: present
-  become: true
-  become_user: "{{ user_name }}"
-  when: terminal_bg_type == 'transparent'
 
