--- a/defaults/main/mate_terminal.yml
+++ b/defaults/main/mate_terminal.yml
@@ -1,6 +1,9 @@
 # background either "solid" or "transparent"
-terminal_bg_type: "transparent"
+# terminal_bg_type: "transparent"
 
-# if transparent background, from "0.00" (fully-transparent) to "1.00" (opaque)
-terminal_bg_transparency: "0.85"
+# background color hex code
+terminal_bg_color: "#000000000000"
+
+# value from "0.01" (fully-transparent) to "1.00" (solid background color)
+terminal_bg_transparency: "0.84"
 
