--- a/tasks/config/mate_terminal.yml
+++ b/tasks/config/mate_terminal.yml
@@ -3,7 +3,7 @@
     - name: "In MATE Terminal app, set background to '{{ bg_type }}'"
       community.general.dconf:
         key: "/org/mate/terminal/profiles/default/background-type"
-        value: "{{ bg_type }}"
+        value: "'{{ bg_type }}'"
         state: present
       vars:
         bg_type: "{{ 'solid' if (terminal_bg_transparency == '1.00') else 'transparent' }}"
