--- a/tasks/config/mate_terminal.yml
+++ b/tasks/config/mate_terminal.yml
@@ -13,6 +13,7 @@
         value: "{{ terminal_bg_transparency }}"
         state: present
       when: terminal_bg_transparency != '1.00'
+      changed_when: false
     - name: "In MATE Terminal app, set background color to '{{ terminal_bg_color }}'"
       community.general.dconf:
         key: "/org/mate/terminal/profiles/default/background-color"
