--- a/defaults/main/mate_terminal.yml
+++ b/defaults/main/mate_terminal.yml
@@ -7,3 +7,6 @@ terminal_bg_transparency: "0.85"
 # foreground color (i.e. text color) hex code
 terminal_fg_color: "#F6F6F5F5F4F4"
 
+# foreground bold color (i.e. bold text color) hex code
+terminal_fg_bold_color: "#FFFFFFFFFFFF"
+
