--- a/tasks/config/mate_terminal.yml
+++ b/tasks/config/mate_terminal.yml
@@ -24,6 +24,16 @@
         key: "/org/mate/terminal/profiles/default/foreground-color"
         value: "'{{ terminal_fg_color }}'"
         state: present
+    - name: "In MATE Terminal app, set match-fg-text-for-bold-color to 'false'"
+      community.general.dconf:
+        key: "/org/mate/terminal/profiles/default/bold-color-same-as-fg"
+        value: "false"
+        state: present
+    - name: "In MATE Terminal app, text-bold-color to '{{ terminal_fg_bold_color }}'"
+      community.general.dconf:
+        key: "/org/mate/terminal/profiles/default/bold-color"
+        value: "'{{ terminal_fg_bold_color }}'"
+        state: present
   become: true
   become_user: "{{ user_name }}"
 
