--- a/tasks/config/mate_terminal.yml
+++ b/tasks/config/mate_terminal.yml
@@ -34,6 +34,11 @@
         key: "/org/mate/terminal/profiles/default/bold-color"
         value: "'{{ terminal_fg_bold_color }}'"
         state: present
+    - name: "In MATE Terminal app, set cursor-blink to '{{ terminal_cursor_blink }}'"
+      community.general.dconf:
+        key: "/org/mate/terminal/profiles/default/cursor-blink-mode"
+        value: "'{{ terminal_cursor_blink }}'"
+        state: present
   become: true
   become_user: "{{ user_name }}"
 
