--- a/tasks/config/mate_terminal.yml
+++ b/tasks/config/mate_terminal.yml
@@ -44,6 +44,13 @@
         key: "/org/mate/terminal/profiles/default/cursor-blink-mode"
         value: "'{{ terminal_cursor_blink }}'"
         state: present
+    - name: "In MATE Terminal app, set use-system-font to '{{ use_sys_font }}'"
+      community.general.dconf:
+        key: "/org/mate/terminal/profiles/default/use-system-font"
+        value: "{{ use_sys_font }}"
+        state: present
+      vars:
+        use_sys_font: (terminal_font == 'system')
   become: true
   become_user: "{{ user_name }}"
 
