Terminal: set font, conditionally

--- a/tasks/config/mate_terminal.yml
+++ b/tasks/config/mate_terminal.yml
@@ -51,6 +51,12 @@
         state: present
       vars:
         use_sys_font: (terminal_font == 'system')
+    - name: "In MATE Terminal app, set font to '{{ terminal_font }}'"
+      community.general.dconf:
+        key: "/org/mate/terminal/profiles/default/font"
+        value: "{{ terminal_font }}"
+        state: present
+      when: terminal_font != 'system'
   become: true
   become_user: "{{ user_name }}"
 
