mate_terminal: set num-scrollback-lines

--- a/defaults/main/mate_terminal.yml
+++ b/defaults/main/mate_terminal.yml
@@ -13,3 +13,6 @@ terminal_fg_bold_color: "#FFFFFFFFFFFF"
 # cursor-blink "on" or "off"
 terminal_cursor_blink: "off"
 
+# number of lines to retain in terminal scroll-history
+terminal_num_scrollback_lines: "20000"
+
