--- a/tasks/config/main.yml
+++ b/tasks/config/main.yml
@@ -19,6 +19,9 @@
 - name: "Configure keyboard settings"
   ansible.builtin.include_tasks: keyboard.yml
 
+- name: "Configure mouse pointer settings"
+  ansible.builtin.include_tasks: mouse.yml
+
 - name: "Configure media devices settings"
   ansible.builtin.include_tasks: media_devices.yml
 
