sound debug: try inverting settings

--- a/tasks/config/sound.yml
+++ b/tasks/config/sound.yml
@@ -11,7 +11,7 @@
       community.general.dconf:
         key: "/org/mate/desktop/sound/event-sounds"
         # value: "'{{ use_sounds }}'"
-        value: "'true'"
+        value: "'false'"
         state: present
       vars:
         use_sounds: "{{ 'false' if (sound_theme == 'none') else 'true' }}"
@@ -19,7 +19,7 @@
       community.general.dconf:
         key: "/org/mate/desktop/sound/input-feedback-sounds"
         # value: "'{{ use_input }}'"
-        value: "'true'"
+        value: "'false'"
         state: present
       vars:
         use_input: "{{ 'true' if enable_input_sounds else 'false' }}"
