--- a/tasks/config/sound.yml
+++ b/tasks/config/sound.yml
@@ -7,22 +7,22 @@
         state: present
       vars:
         theme_name: "{{ '__no_sounds' if (sound_theme == 'none') else sound_theme }}"
-    - name: "For sound, set event-sounds to '{{ use_sounds }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/sound/event-sounds"
-        value: "'{{ use_sounds }}'"
-        # value: "'true'"
-        state: present
-      vars:
-        use_sounds: "{{ 'false' if (sound_theme == 'none') else 'true' }}"
-    - name: "For sound, set input-feedback-sounds to '{{ use_input }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/sound/input-feedback-sounds"
-        value: "'{{ use_input }}'"
-        # value: "'true'"
-        state: present
-      vars:
-        use_input: "{{ 'true' if enable_input_sounds else 'false' }}"
+    # - name: "For sound, set event-sounds to '{{ use_sounds }}'"
+    #   community.general.dconf:
+    #     key: "/org/mate/desktop/sound/event-sounds"
+    #     value: "'{{ use_sounds }}'"
+    #     # value: "'true'"
+    #     state: present
+    #   vars:
+    #     use_sounds: "{{ 'false' if (sound_theme == 'none') else 'true' }}"
+    # - name: "For sound, set input-feedback-sounds to '{{ use_input }}'"
+    #   community.general.dconf:
+    #     key: "/org/mate/desktop/sound/input-feedback-sounds"
+    #     value: "'{{ use_input }}'"
+    #     # value: "'true'"
+    #     state: present
+    #   vars:
+    #     use_input: "{{ 'true' if enable_input_sounds else 'false' }}"
   become: true
   become_user: "{{ user_name }}"
 
