sound: for evt-snd, try actual boolean true

--- a/tasks/config/sound.yml
+++ b/tasks/config/sound.yml
@@ -3,8 +3,8 @@
   - name: "For sound, set event-sounds to '{{ use_sounds }}'"
     community.general.dconf:
       key: "/org/mate/desktop/sound/event-sounds"
-      value: "'{{ use_sounds }}'"
-      # value: "'true'"
+      # value: "'{{ use_sounds }}'"
+      value: "true"
       state: present
     vars:
       use_sounds: "{{ 'false' if (sound_theme == 'none') else 'true' }}"
