--- a/tasks/config/windowing.yml
+++ b/tasks/config/windowing.yml
@@ -3,7 +3,7 @@
     - name: "For windowing actions, set draw-animations to '{{ use_animations }}'"
       community.general.dconf:
         key: "/org/mate/desktop/interface/enable-animations"
-        value: "'{{ use_animations }}'"
+        value: "{{ use_animations }}"
         state: present
       vars:
         use_animations: "{{ 'true' if windowing_animations else 'false' }}"
