--- a/tasks/config/power_and_screen.yml
+++ b/tasks/config/power_and_screen.yml
@@ -6,7 +6,7 @@
       value: "{{ blank_min }}"
       state: present
     vars:
-      blank_min: screen_blank_time * 60
+      blank_min: "{{ screen_blank_time * 60 }}"
   become: true
   become_user: "{{ user_name }}"
 
