screen blank: adjust task descrip

--- a/tasks/config/power_and_screen.yml
+++ b/tasks/config/power_and_screen.yml
@@ -1,6 +1,6 @@
 - name: "Configure screensaver and power settings"
   block:
-  - name: "For screen/power, set AC-power screen blank delay to '{{ 'no_screen_blank' if (blank_min == 0) else blank_min }}'"
+  - name: "For screen/power, set AC-power screen blank delay to '{{ 'no_screen_blank' if (blank_min == 0) else (screen_blank_time + ' minutes') }}'"
     community.general.dconf:
       key: "/org/mate/power-manager/sleep-display-ac"
       value: "{{ blank_min }}"
