--- a/tasks/config/power_and_screen.yml
+++ b/tasks/config/power_and_screen.yml
@@ -1,13 +1,23 @@
 - name: "Configure screensaver and power settings"
   block:
-  - name: "For screen/power, set AC-power screen blank delay to {{ setting }}"
+  - name: "For screen/power, set AC-power screen blank delay to {{ blank_setting }}"
     community.general.dconf:
       key: "/org/mate/power-manager/sleep-display-ac"
       value: "{{ blank_min }}"
       state: present
-    vars:
-      blank_min: "{{ screen_blank_time * 60 }}"
-      setting: "{{ 'no-screen-blank' if (blank_min == 0) else screen_blank_time }}{{ '' if (blank_min == 0) else ' minutes' }}"
+  - name: "For screen/power, set battery-power screen blank delay to {{ blank_setting }}"
+    community.general.dconf:
+      key: "/org/mate/power-manager/sleep-display-battery"
+      value: "{{ blank_min }}"
+      state: present
+  - name: "For screen/power, set UPS-power screen blank delay to {{ blank_setting }}"
+    community.general.dconf:
+      key: "/org/mate/power-manager/sleep-display-ups"
+      value: "{{ blank_min }}"
+      state: present
+  vars:
+    blank_min: "{{ screen_blank_time * 60 }}"
+    blank_setting: "{{ 'no-screen-blank' if (blank_min == 0) else screen_blank_time }}{{ '' if (blank_min == 0) else ' minutes' }}"
   become: true
   become_user: "{{ user_name }}"
 
